Add pfbd driver to access PureFlash

--- a/block/meson.build
+++ b/block/meson.build
@@ -110,6 +110,8 @@ foreach m : [
   [libnfs, 'nfs', files('nfs.c')],
   [libssh, 'ssh', files('ssh.c')],
   [rbd, 'rbd', files('rbd.c')],
+  [pfbd, 'pfbd', pfbd, 'pfbd.c'],
+
 ]
   if m[0].found()
     module_ss = ss.source_set()
